--- a/restaurant_menu/nbproject/project.properties
+++ b/restaurant_menu/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jar=${dist.dir}/restaurant_menu.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\SHAKIL\\Downloads\\mysql-connector-java-8.0.19.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
